crates/vite_task_bin/tests/e2e_snapshots/fixtures/filter-unmatched/snapshots/multiple unmatched filters warn individually.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run --filter @test/app --filter nope1 --filter nope2 build
No packages matched the filter: nope1
No packages matched the filter: nope2
~/packages/app$ print built-app
built-app
