crates/vite_task_bin/tests/e2e_snapshots/fixtures/filter-unmatched/snapshots/partial match warns for unmatched filter.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run --filter @test/app --filter nonexistent build
No packages matched the filter: nonexistent
~/packages/app$ print built-app
built-app
