crates/vite_task_bin/tests/e2e_snapshots/fixtures/filter-unmatched/snapshots/unmatched directory filter warns.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run --filter @test/app --filter ./packages/nope build
No packages matched the filter: ./packages/nope
~/packages/app$ print built-app
built-app
