crates/vite_task_bin/tests/e2e_snapshots/fixtures/filter-unmatched/snapshots/unmatched glob filter warns.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run --filter @test/app --filter @nope/* build
No packages matched the filter: @nope/*
~/packages/app$ print built-app
built-app
